[package]
name = "get-lambda"
version = "0.1.0"
edition = "2021"
authors = ["Benjamen Pyle"]

[dependencies]
shared = { path = "../shared" }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"

serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
aws-config = { features = ["behavior-version-latest"], version = "1.0.1" }
aws-sdk-dynamodb = "1.2.0"

tokio = { version = "1", features = ["macros"] }
thiserror = "1.0.56"
config = "0.14.0"
lambda_http = "0.10.0"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
openssl = { version = "0.10.35", features = ["vendored"] }
momento = "0.44.0"

opentelemetry = "0.23.0"
opentelemetry-datadog = { version = "0.11.0", features = ["reqwest-client"] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio", "trace"] }
opentelemetry-http = { version = "0.12", features = ["reqwest"] }
opentelemetry-stdout = "0.4.0"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"

